--- a/test/.htaccess
+++ b/test/.htaccess
@@ -16,7 +16,7 @@ ExpiresDefault "access plus 5 seconds"
 # Cache Images
 ExpiresByType image/x-icon "access plus 2592000 seconds"
 ExpiresByType image/jpeg "access plus 2592000 seconds"
-ExpiresByType image/png "access plus 2592000 seconds"
+ExpiresByType image/png "access plus 600 seconds"
 ExpiresByType image/gif "access plus 2592000 seconds"
 ExpiresByType image/svg+xml "access plus 2592000 seconds"
 
@@ -30,8 +30,8 @@ ExpiresByType image/svg+xml "access plus 2592000 seconds"
 # Cache other content types (Flash, CSS, JS, HTML, XML)
 ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
 ExpiresByType text/css "access plus 604800 seconds"
-ExpiresByType text/javascript "access plus 2592000 seconds"
-ExpiresByType application/javascript "access plus 2592000 seconds"
+ExpiresByType text/javascript "access plus 1800 seconds"
+ExpiresByType application/javascript "access plus 1800 seconds"
 ExpiresByType application/x-javascript "access plus 2592000 seconds"
 ExpiresByType text/html "access plus 600 seconds"
 ExpiresByType application/xhtml+xml "access plus 600 seconds"
